# yul2llvm

./: .clang-format  .clang-format.yaml  .gitignore  .pyul-config.yaml  CMakeLists.txt  HelloWorld.sol  README.md  flake.nix  notes.org  pyproject.toml
.github/workflows/: ci.yml
cmake/: FindGMP.cmake  Yul2LLVMConfig.cmake.in
compiled/ERC20/: ERC20.json
compiled/SimpleAdd/: SimpleAdd.json
corpus/: ERC20.sol  SimpleAdd.sol
doc/doxygen/: index.md
lib/: CMakeLists.txt
lib/include/libYulAST/: IntrinsicPatterns.h  YulASTBase.h  YulAssignmentNode.h  YulBlockNode.h  YulBreakNode.h  YulCaseNode.h  YulConstants.h  YulContinueNode.h  YulContractNode.h  YulDefaultNode.h  YulExpressionNode.h  YulForNode.h  YulFunctionArgListNode.h  YulFunctionCallNode.h  YulFunctionDefinitionNode.h  YulFunctionRetListNode.h  YulIdentifierListNode.h  YulIdentifierNode.h  YulIfNode.h  YulLeaveNode.h  YulLiteralNode.h  YulNodeBuilder.h  YulNumberLiteral.h  YulNumberLiteralNode.h  YulStatementNode.h  YulStringLiteralNode.h  YulSwitchNode.h  YulTypedIdentifierList.h  YulTypedIdentifierListNode.h  YulVariableDeclarationNode.h
lib/include/libYulAST/YulASTVisitor/: CodegenConstants.h  CodegenVIsitor.h  CodegenVisitor.h  FunctionCallHelper.h  FunctionDeclaratorVisitor.h  FunctionDefinitionHelper.h  IntrinsicEmitter.h  IntrinsicHelper.h  LLVMCodeGenVisitor.h  VisitorBase.h  YulLLVMHelpers.h
lib/include/libyul2llvm/: TranslateYulToLLVM.h
lib/include/libyul2llvm/YulASTVisitor/: CodegenConstants.h  CodegenVisitor.h  FunctionCallHelper.h  FunctionDeclaratorVisitor.h  FunctionDefinitionHelper.h  IntrinsicHelper.h  VisitorBase.h
lib/libYulAST/: CMakeLists.txt  IntrinsicPatterns.cpp  YulASTBase.cpp  YulAssignmentNode.cpp  YulAstBase.cpp  YulBlockNode.cpp  YulBreakNode.cpp  YulCaseNode.cpp  YulContinueNode.cpp  YulContractNode.cpp  YulDefaultNode.cpp  YulExpressionNode.cpp  YulForNode.cpp  YulFunctionArgListNode.cpp  YulFunctionCallNode.cpp  YulFunctionDefinitionNode.cpp  YulFunctionRetListNode.cpp  YulIdentifierListNode.cpp  YulIdentifierNode.cpp  YulIfNode.cpp  YulLeaveNode.cpp  YulLiteralNode.cpp  YulNodeBuilder.cpp  YulNumberLiteralNode.cpp  YulStatementNode.cpp  YulStringLiteralNode.cpp  YulSwitchNode.cpp  YulTypedIdentifierListNode.cpp  YulVariableDeclarationNode.cpp
lib/libYulAST/YulASTVisitor/: CMakeLists.txt  CallGenHelpers.cpp  CallGenHelpers.h  CodegenIntrinsicHelper.cpp  CodegenVisitor.cpp  FunctionCallHelper.cpp  FunctionDeclaratorVisitor.cpp  FunctionDefinitionHelper.cpp  IntrinsicEmitter.cpp  IntrinsicHelper.cpp  IntrinsicRewriter.cpp  VisitorBase.cpp  YulLLVMHelpers.cpp
lib/libyul2llvm/: CMakeLists.txt  TranslateYulToLLVM.cpp
lib/libyul2llvm/YulASTVisitor/: CMakeLists.txt  CallGenHelpers.cpp  CallGenHelpers.h  CodegenVisitor.cpp  FunctionCallHelper.cpp  FunctionDeclaratorVisitor.cpp  FunctionDefinitionHelper.cpp  IntrinsicEmitter.cpp  IntrinsicHelper.cpp  IntrinsicRewriter.cpp  VisitorBase.cpp  YulLLVMHelpers.cpp
lib/yul2llvm_cpp/: CMakeLists.txt  yul2llvm_cpp.cpp
src/pyul/: ast.py  cli.py  core.py  preprocess.py  translator.py
src/pyul/utils/: abidecode.py  abiencode.py  keccak256.py  yul_parser.py  yul_translator.py
src/pyul/utils/YulAntlr/: YulLexer.py  YulListener.py  YulParser.py
src/utils/: yul_parser.py
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in  lit_cpp.site.cfg.py.in  test_core.py  test_pyul.py  test_yul_parser.py
tests/cpp/: CMakeLists.txt  ConvertGMPToAPIntTest.cpp  Example_Test.cpp  error-tester.json  error-tester.sol  error_handling.test.txt  for-test.json  if-then-else-test.json  if-then-test.json  if-then.json  negative-literal.json  one-var.json  same-slot.json  sample_test.json  sample_test.json~0624a21 (if-then unit testcase added)  storageLayout.json  stringliteral.json  two-vars.json  yul.json
tests/cpp/ASTClassesTest/: ASTClassTest.cpp  CMakeLists.txt
tests/e2e/: ERC20.sol  SimpleAdd.sol  hello-multifile.txt
tests/e2e/Inputs/hello-multifile/: MainContract.sol
tests/e2e/Inputs/hello-multifile/subdir/: IMyInterface.sol
tests/e2e/feature/: AbstractContractTest.sol  AddressTransfer.sol  LowLevelCallTest.sol  ReturnString.sol  array-storage.sol  array.sol  external-call-mullti-ret.sol  external-call.sol  inheritance.sol  library.sol  mapping.sol  negative-literal.sol  nested-mapping.sol  overloading.sol  simple-arithmetic.sol  struct-mem.sol  struct-storage-alias.sol  struct-storage.sol
tests/e2e/feature/control-flow/: do-while-loop.sol  for-loop.sol  if-then-else.sol  if-then.sol  ite-ssa.sol  while-loop.sol
tests/e2e/feature/dyn-types/: bytes-dyn.sol  bytes1.sol  bytes2.sol  bytesn.sol
tests/e2e/feature/memory/: string-calldata.sol  string-mem.sol  string-storage.sol
tests/e2e/feature/sotrage/: stor-var-multiple-slot.sol  stor-var-same-slot.sol
tests/e2e/feature/storage/: array-storage.sol  stor-var-multiple-slot.sol  stor-var-same-slot.sol
tests/e2e/feature/structs/: struct-mem-alias.sol  struct-mem-args.sol  struct-mem-local.sol  struct-mem-return.sol  struct-mem2storage.sol  struct-storage-alias.sol  struct-storage-return.sol  struct-storage.sol  struct-storage2mem.sol
tests/e2e/makerdao/: vat.sol
tests/e2e/solidity-feature-tests/: external-call.sol  inheritance.sol  mapping.sol  simple-arithmetic.sol
tests/e2e/solidity-feature-tests/control-structures/: do-while-loop.sol  for-loop.sol  if-then-else.sol  if-then.sol  while-loop.sol
tests/e2e/solidity-feature-tests/mem-layout/: string-calldata.sol  string-mem.sol
tests/e2e/solidity-feature-tests/storage-vars/: stor-var-multiple-slot.sol  stor-var-same-slot.sol
tests/py/: metadata_SimpleAdd.txt  test_ast.py  test_preprocess.py
tests/py/Inputs/: ERC20_deployedbody.json  SimpleAdd_deployedbody.json
yul-playground/compiled/: solc_input.json  solc_output.json
yul-playground/compiled/control-flow/for-loop.sol/ForLoopTestContract/: abi.json  input_yul.json  ir.yul  ir_prepreprocess.yul  llvm_ir.ll  yul.json
yul-playground/compiled/control-flow/if-then.sol/IfThenTestContract/: abi.json  input_yul.json  ir.yul  ir_prepreprocess.yul  llvm_ir.ll  (+2 more)
