[tool.poetry]
name = "pyul"
version = "0.1.0"
description = ""
authors = ["elias <elias.jm.garcia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
solc-select = "^0.2.1"
pysha3 = "1.0.2"
eth-abi = "2.1.1"
antlr4-python3-runtime = "4.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
pyul = "pyul.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
