[tool.poetry]
name = "pyul"
version = "0.1.0"
description = ""
authors = ["elias <elias.jm.garcia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
antlr4-python3-runtime = "4.8"

# TODO: these belong to Eurus' python scripts, do we need them?
pysha3 = "1.0.2"
eth-abi = "2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
pyul = "pyul.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
